# HTU21demo

./: CMakeLists.txt  htu21.c  htu21x-sensor.py  tracer.h
